fixing jumpy links on resize

--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -63,7 +63,7 @@
 
 .header__links {
   padding-bottom: .5rem;
-  display: block;
+  display: none;
   position: absolute;
   top: 3.75em;
   left: 0;
